[package]
name = "matplotlib"
version = "0.1.0"
edition = "2018"

[lib]
name = "matplotlib"

[dependencies]
pyo3 = { version = "0.14.5", features = ["auto-initialize"] }
anyhow = "1.0.44"
numpy = "0.14.1"
ndarray = "0.15.3"
opencv = { version = "0.55", optional = true }

[features]
default = ["opencv"]